--- a/miniprogram/pages/indexInfo/indexInfo.wxml
+++ b/miniprogram/pages/indexInfo/indexInfo.wxml
@@ -13,14 +13,14 @@
       <text class="infoTitle" bindtap="toInfomation" data-id='{{item.journalInfo.id}}'>{{item.journalInfo.title}}</text>
       <view class="info1">
         <view class="infoImg" bindtap="toInfomation" data-id='{{item.journalInfo.id}}'>
-          <image src="{{item.journalInfo.imgUrl!=null?item.journalInfo.imgUrl:'../../images/def.png'}}" style="width: 100%;height: 243rpx;" binderror='errimg' data-errorimg="{{idx}}" data-errorimg1="{{idx1}}"></image>
+          <image src="{{item.journalInfo.logoImg!=null?'http://img.sangerbox.com/'+item.journalInfo.logoImg:'../../images/def.png'}}" style="width: 100%;height: 243rpx;" binderror='errimg' data-errorimg="{{idx}}" data-errorimg1="{{idx1}}"></image>
         </view>
         <view class="infoIn">
           <view class="press">
             <view bindtap="toInfomation" data-id='{{item.journalInfo.id}}'>{{item.journalInfo.country}}</view>
-            <view bindtap="gunazhu" class="{{gzList=='undefined' || filter.numberSlice3(gzList,item.journalInfo.id)=='-1'?'':'act'}}" data-id='{{item.journalInfo.id}}'>
+            <button bindgetuserinfo="gunazhu" open-type="getUserInfo" class="{{gzList=='undefined' || filter.numberSlice3(gzList,item.journalInfo.id)=='-1'?'':'act'}}" data-id='{{item.journalInfo.id}}'>
               {{gzList=='undefined' || filter.numberSlice3(gzList,item.journalInfo.id)=='-1'?gz:gz1}}
-            </view>
+            </button>
           </view>
           <view class="infoIn1" bindtap="toInfomation" data-id='{{item.journalInfo.id}}'>
             <text style="margin-right:30rpx">出版周期：</text>
@@ -39,15 +39,15 @@
                   <text style="color: #6C7B8A;">|</text>
                   <text style="color: #6C7B8A;">即时</text>
                 </view>
-                <view>
+                <view style="color:{{filter.numberSlice6(item.jcrId.newIf/item.jcrId.oldIf)}};border-color:{{filter.numberSlice6(item.jcrId.newIf/item.jcrId.oldIf)}}">
                   <text style="margin-right:15rpx">同比增长</text>
                   <text style="font-size:20rpx">{{(item.jcrId!=null)?((item.jcrId.newIf==null && item.jcrId.oldIf==null)?"NA":filter.numberSlice1(item.jcrId.newIf/item.jcrId.oldIf*100)+"%"):"NA"}}</text>
                 </view>
               </view>
               <view class="ifBottom">
-                <text style="color: #3366CC;">{{(item.jcrId!=null)?((item.jcrId.newIf==null)?"NA":filter.numberSlice(item.jcrId.newIf)):"NA"}}</text>
+                <text style="color: #6C7B8A;">{{(item.ifs!=null)?((item.ifs[0].year2019==null)?item.ifs[0].year2018:filter.numberSlice(item.ifs[0].year2019)):"NA"}}</text>
                 <text style="color: #6C7B8A;">|</text>
-                <text style="color: #6C7B8A;">{{(item.jcrId!=null)?((item.jcrId.oldIf==null)?"NA":filter.numberSlice(item.jcrId.oldIf)):"NA"}}</text>
+                <text style="color: #3366CC;">{{(item.jcrId!=null)?((item.jcrId.newIf==null)?"NA":filter.numberSlice(item.jcrId.newIf)):"NA"}}</text>
               </view>
             </view>
           </view>
